checkpoint, updated all items to database. now working on adding extra data field
